--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-         android:layout_marginTop="100dp"
+        android:layout_marginTop="100dp"
         android:padding="10dp"
         android:background="@drawable/container"
         android:layout_gravity="center_horizontal"
@@ -50,7 +50,7 @@
                 app:srcCompat="@drawable/final_quiz" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tvScore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
@@ -80,7 +80,7 @@
             android:text="Você concluiu o quiz" />
 
         <Button
-            android:id="@+id/bt_enviar"
+            android:id="@+id/tvPlayAgain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
