--- a/app/src/main/res/layout/activity_conteudo_view.xml
+++ b/app/src/main/res/layout/activity_conteudo_view.xml
@@ -6,18 +6,121 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/azulterc"
     tools:context=".ConteudoView">
 
 <include
     layout="@layout/appbarprin">
 
 </include>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/titulo_1"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:justificationMode="inter_word"
+        android:textStyle="bold"
+        android:text="titulo1" />
+
+    <TextView
+        android:id="@+id/ass_1"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:justificationMode="inter_word"
+        android:textStyle="bold"
+        android:text="assunto1" />
+
+    <TextView
+        android:id="@+id/titulo_2"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:justificationMode="inter_word"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:text="titulo2" />
+
+    <TextView
+        android:id="@+id/ass_2"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:justificationMode="inter_word"
+        android:textStyle="bold"
+        android:text="assunto2" />
+
+    <TextView
+        android:id="@+id/titulo_3"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:justificationMode="inter_word"
+        android:textStyle="bold"
+        android:text="titulo3" />
+
+    <TextView
+        android:id="@+id/ass_3"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:justificationMode="inter_word"
+        android:text="assunto3" />
+
+    <TextView
+        android:id="@+id/titulo_4"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:justificationMode="inter_word"
+        android:textStyle="bold"
+        android:text="titulo4" />
+
+    <TextView
+        android:id="@+id/ass_4"
+        android:layout_margin="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:justificationMode="inter_word"
+        android:textStyle="bold"
+        android:text="assunto4" />
+
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-       android:layout_gravity="end">
+        android:layout_gravity="end">
+
+
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -27,8 +130,10 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/anotacoes" />
 
+
+
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/bt_ar"
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,5 +141,7 @@
             app:srcCompat="@drawable/realidade_aumentada" />
     </LinearLayout>
 
+</LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
