--- a/app/src/main/res/layout/activity_home_aluno_acom_view.xml
+++ b/app/src/main/res/layout/activity_home_aluno_acom_view.xml
@@ -48,31 +48,33 @@
             android:textStyle="bold"
             android:text="Salas" />
 
-    <ImageButton
-
-        android:id="@+id/bt_seleciona"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       android:layout_gravity="right"
-        android:layout_marginRight="10dp"
-        android:background="@android:color/transparent"
-        app:srcCompat="@drawable/bt_editar" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
 
-        tools:itemCount="5"
-        tools:listitem="@layout/card_view_design" />
+                tools:itemCount="5"
+                tools:listitem="@layout/card_view_design" />
 
-    <ImageButton
-        android:layout_marginTop="20dp"
-        android:id="@+id/bt_EntrarSala"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        app:srcCompat="@drawable/btmais" />
+            <ImageButton
+                android:layout_marginTop="20dp"
+                android:id="@+id/bt_EntrarSala"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/btmais" />
+        </LinearLayout>
+    </ScrollView>
+
+
+
 
 </LinearLayout>
